--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,5 @@
-@font-face {
-    font-family: 'Korean-Font';
-    src: url("/fonts/KoreanLooks-jErAM.ttf");
-}
-
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, ;
+    font-family: 'Neucha', cursive;
     background: #1b1b1b;
     margin: 0;
     display: -ms-grid;
@@ -20,7 +15,7 @@ body {
 }
 
 h1 {
-    font-family: 'Korean-Font', sans-serif;
+    font-family: 'Neucha', cursive;
     color: rgb(255, 255, 255);
     font-size: 1.8rem;
 }
