--- a/css/main.scss
+++ b/css/main.scss
@@ -1,11 +1,12 @@
 body {
-    font-family: 'Neucha', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     background: #1b1b1b;
     margin: 0;
     display: -ms-grid;
     display: grid;
     place-content: center;
     height: 100vh;
+    width: 100vw;
 }
 
 .container {
@@ -18,6 +19,10 @@ h1 {
     font-family: 'Neucha', cursive;
     color: rgb(255, 255, 255);
     font-size: 1.8rem;
+}
+
+p {
+    color: white;
 }
 
 button {
@@ -39,4 +44,8 @@ button {
     &:active {
         background: rgb(233, 51, 51);
     }
+}
+
+img {
+    width: 10rem;
 }
